--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,26 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;900&display=swap');
+
 *,*:before,*::after{
 box-sizing: border-box;
 }
 
+body{
+    margin: 0;
+    font-family: 'Poppins', sans-serif;
+}
 .container {
     width: 1200px;
     margin: 0 auto;
 }
 
-body{
-    background-color:black;
+.header {
+    background-color: black;
+}
+
+.header__wrapper {
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+
 }
