--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,21 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;900&display=swap');
 
-*,*:before,*::after{
+*,*:before,*:after{
 box-sizing: border-box;
 }
 
 body{
     margin: 0;
     font-family: 'Poppins', sans-serif;
+    font-size: 15px;
 }
+
 .container {
     width: 1200px;
     margin: 0 auto;
 }
 
+ /* Header start */
 .header {
     background-color: black;
 }
@@ -24,3 +27,71 @@ body{
     justify-content: space-between;
 
 }
+
+.header__block {
+    widht: 20%;
+}
+
+.header__block:last-child {
+    text-align: right;
+}
+
+.nav{
+    display: flex;
+}
+
+.nav__link {
+    margin-right: 35px;
+
+    color: white;
+    text-transform: uppercase;
+    text-decoration: none;
+    font-weight: 600;
+    position: relative;
+}
+
+.nav__link::after{
+    width: 100%;
+    height: 2px;
+    background-color: #fff;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    content: "";
+    opacity: 0;
+    transition: .2s; ease;
+}
+
+.nav__link:last-child {
+    margin-right: 0;
+}
+
+.nav__link:hover:after {
+    opacity: 1;
+}
+
+.nav__link.active:after{
+    opacity: 1;
+
+}
+
+.header__lng {
+    display: flex;
+    justify-content: flex-end;
+
+}
+
+.header__lng-link {
+    margin-right: 8%;
+
+    font-weight: 600;
+    color: #b7b7b7;
+    text-transform: uppercase;
+    text-decoration: none;
+}
+
+.header__lng-link.active {
+    color: #fff;
+}
+
+/* Header end */
