--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;900&display=swap');
 
 *,*:before,*:after{
 box-sizing: border-box;
@@ -10,14 +10,44 @@ body{
     font-size: 15px;
 }
 
+h1,h2,h3,h4,h5,h6{
+    margin: 0;
+}
+
 .container {
     width: 1200px;
     margin: 0 auto;
 }
 
+
+.btn {
+    min-width: 200px;
+    height: 50px;
+    padding: 0 15px;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    color: #fff;
+    text-decoration: none;
+    font-size: 18px;
+    height: 50px;
+    font-weight: 500;
+    background-color: #db2512;
+    transition: background-color .2s ease;
+
+}
+
+.btn:hover {
+    background-color: #f04a3a;
+}
  /* Header start */
 .header {
-    background-color: black;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 3;
+
 }
 
 .header__wrapper {
@@ -29,7 +59,7 @@ body{
 }
 
 .header__block {
-    widht: 20%;
+    width: 20%;
 }
 
 .header__block:last-child {
@@ -59,7 +89,7 @@ body{
     left: 0;
     content: "";
     opacity: 0;
-    transition: .2s; ease;
+    transition: .2s ease;
 }
 
 .nav__link:last-child {
@@ -82,7 +112,7 @@ body{
 }
 
 .header__lng-link {
-    margin-right: 8%;
+    margin-right: 8px;
 
     font-weight: 600;
     color: #b7b7b7;
@@ -90,8 +120,54 @@ body{
     text-decoration: none;
 }
 
+.header__block:last-child{
+    margin-right: 0;
+}
+
 .header__lng-link.active {
     color: #fff;
 }
 
 /* Header end */
+
+/* intro start */
+.intro{
+    background: url('../img/intro_bg.jpg') no-repeat;
+    background-size: cover;
+    position: relative;
+}
+
+.intro__after {
+    width: 100%;
+    height: 100%;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+
+    background-color: #000;
+    opacity: .2;
+}
+
+.intro__content {
+    height: 750px;
+    display: flex;
+    align-items: center;
+    position: relative;
+    z-index: 2;
+}
+
+.intro__block {
+
+}
+
+.intro__title {
+    max-width: 790px;
+    margin-bottom: 30px;
+    font-size: 48px;
+    font-weight: 700;
+    color: #fff;
+    line-height: 1.5;
+}
+
+/* intro end */
