--- a/css/style.css
+++ b/css/style.css
@@ -191,15 +191,6 @@ p {
 
 }
 
-.info__wrapper {
-    display: flex;
-    margin: 0 -10px;
-}
-
-.info__block {
-    width: 33.33%;
-    padding: 0 10px;
-}
 
 .info__item {
     background-color: #fff;
@@ -228,12 +219,14 @@ p {
 
 /* block start */
 .block__title {
+    margin-bottom: 60px;
     margin-bottom: 15px;
     font-size: 30px;
     letter-spacing: 0.15em;
 }
 
 .block__link {
+    display: inline-block;
     letter-spacing: 0.15em;
     color: #000;
 }
@@ -241,4 +234,36 @@ p {
 .block__link:hover {
     text-decoration: none;
 }
+
+.wrapper {
+    display: flex;
+    margin: 0 -10px;
+}
+
+.block {
+    width: 33.33%;
+    padding: 0 10px;
+}
 /* block end */
+
+/* services start*/
+
+.services__item {
+
+}
+
+.services__content {
+    height: 500px;
+    background: url("../img/iStock-1125646126\ 1.jpg");
+
+}
+
+.services__title {
+
+}
+
+.services__text{
+
+}
+
+/* services end */
