--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,6 @@ p {
     font-weight: 500;
     background-color: #db2512;
     transition: background-color .2s ease;
-
 }
 
 .btn:hover {
@@ -50,7 +49,6 @@ p {
     top: 0;
     left: 0;
     z-index: 3;
-
 }
 
 .header__wrapper {
@@ -58,7 +56,6 @@ p {
     display: flex;
     align-items: center;
     justify-content: space-between;
-
 }
 
 .header__block {
@@ -75,7 +72,6 @@ p {
 
 .nav__link {
     margin-right: 35px;
-
     color: white;
     text-transform: uppercase;
     text-decoration: none;
@@ -105,18 +101,15 @@ p {
 
 .nav__link.active:after{
     opacity: 1;
-
 }
 
 .header__lng {
     display: flex;
     justify-content: flex-end;
-
 }
 
 .header__lng-link {
     margin-right: 8px;
-
     font-weight: 600;
     color: #b7b7b7;
     text-transform: uppercase;
@@ -141,7 +134,7 @@ p {
 
 /* intro start */
 .intro{
-    background: url('../img/intro_bg.jpg') no-repeat;
+    background-repeat: no-repeat;
     background-size: cover;
     position: relative;
 }
@@ -249,20 +242,78 @@ p {
 /* services start*/
 
 .services__item {
+    text-decoration: none;
+}
 
+.services__item:hover .services__content-item {
+    opacity: 1;
+}
+
+.services__item:hover .services__content:after {
+    opacity: .7;
 }
 
 .services__content {
     height: 500px;
-    background: url("../img/iStock-1125646126\ 1.jpg");
+    margin-bottom: 20px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative; 
+}
 
+.services__content:after {
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    content: '';
+    transition: opacity .2s ease;
+}
+
+.services__content-item {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    z-index: 2;
+    transition: opacity .2s ease;
+}
+
+.services__img {
+    width: 100px;
+    height: 100px;
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #DB2512;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 .services__title {
-
+    font-size: 20px;
+    font-weight: 600;
+    letter-spacing: 0.23em;
+    color: #000;
 }
 
 .services__text{
+    max-width: 270px;
+    font-size: 18px;
+    font-weight: 600;
+    color: #fff;
+    letter-spacing: 0.23em;
+    position: absolute;
+    left: 30px;
+    bottom: 20px;
 
 }
 
