--- a/css/style.css
+++ b/css/style.css
@@ -178,6 +178,10 @@ p {
     margin-bottom: 100px;
 }
 
+.section.process {
+    padding-top: 50px;
+}
+
 /* info start */
 
 .info {
@@ -337,6 +341,8 @@ p {
 
 .about__wrapper {
     display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 
 .about__block {
@@ -344,6 +350,7 @@ p {
 }
 
 .about__text {
+    margin: 35px 0 40px;
     font-weight: 600;
     color: #B7B7B7;
     letter-spacing: 0.23em;
@@ -361,4 +368,37 @@ p {
     text-decoration: none;
 }
 
+.about__img {
+    height: 340px;
+}
+
 /* about end */
+
+/* process start */
+.process__title {
+    margin-bottom: 50px;
+    font-size: 148px;
+    font-weight: 900;
+    text-transform: uppercase;
+    text-align: center;
+    line-height: 1;
+}
+
+.process__subtitle{
+    margin-bottom: 90px;
+    font-size: 40px;
+    font-weight: 600;
+    text-transform: uppercase;
+    letter-spacing: 0.15em;
+    text-align: center;
+}
+
+.process__item {
+    padding: 30px 30px 15px;
+    height: 100%;
+    min-height: 150px;
+    background: #FFFFFF;
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.25);
+}
+
+/* process end */
