--- a/css/style.css
+++ b/css/style.css
@@ -37,6 +37,7 @@ p {
     font-weight: 500;
     background-color: #db2512;
     transition: background-color .2s ease;
+    cursor: pointer;
 }
 
 .btn:hover {
@@ -417,13 +418,16 @@ p {
     margin: 0 -20px;    
 }
 
-.form__gruop {
+.form__group {
+    margin-bottom: 30px;
     padding: 0 20px;
     flex: 1;
+    position: relative;
 }
 
 .input {
     width: 100%;
+    padding: 10px 0;
     outline: 0;
     border: 0;
     border-bottom: 1px solid #fff;
@@ -432,13 +436,49 @@ p {
     color: #fff;
     font-family: inherit;
     font-size: 15px;
-    padding: 10px 0;
 }
+
+.input:focus + .label {
+    transform: translateY(-15px);
+    font-size: 12px;
+}
+ .input:not(:placeholder-shown) + .label {
+    transform: translateY(-15px);
+    font-size: 12px;
+ }
 
 .label {
     letter-spacing: 0.15em;
     color: #fff;
     position: absolute;
-    top: 0;
-    left: 0;
+    top: 10px;
+    left: 20px;
+    pointer-events: none;
+    transition: all .2s ease;
 }
+
+.textarea {
+    min-height: 130px;
+    width: 100%;
+    padding: 10px 0;
+    resize: vertical;
+    outline: 0;
+    border: 0;
+    border-bottom: 1px solid #fff;
+    background-color: transparent;
+    min-height: 120px;
+    color: #fff;
+    font-family: inherit;
+    font-size: 15px;
+}
+
+.textarea:focus + .label {
+    transform: translateY(-15px);
+    font-size: 12px;
+}
+
+.textarea:not(:placeholder-shown) + .label {
+    transform: translateY(-15px);
+    font-size: 12px;
+ }
+        
